--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <h1>Abrir links com data e hora atual do dispositivo</h1>
 
   <div class="container">
+    <!-- Coluna Rato -->
     <div class="coluna">
       <h2>Rato</h2>
       <button onclick="abrirOrderManagement(190)">Rato - Encomendas Home (190)</button>
@@ -60,6 +61,7 @@
       <button onclick="abrirLiveOperations()">Rato - Encomendas em Direto</button>
     </div>
 
+    <!-- Coluna Cova da Piedade -->
     <div class="coluna">
       <h2>Cova da Piedade</h2>
       <button onclick="abrirOrderManagement(216)">Cova - Encomendas Home (216)</button>
@@ -132,35 +134,36 @@
     }
 
     function abrirLiveOperationsCova() {
-    const baseUrl = "https://perform.lyzer.tech/pt/app/operations/live-operations";
-    const agora = new Date().toISOString();
+      const baseUrl = "https://perform.lyzer.tech/pt/app/operations/live-operations";
+      const agora = new Date().toISOString();
 
-    const params = new URLSearchParams({
-      deliveryDeadline: agora,
-      retailer: "29",
-      store: "145",
-      serviceType: "216",
-      pageIndex: "1",
-      pageSize: "20"
-    });
+      const params = new URLSearchParams({
+        deliveryDeadline: agora,
+        retailer: "29",
+        store: "145",
+        serviceType: "216",
+        pageIndex: "1",
+        pageSize: "20"
+      });
 
-    const statusList = [
-      "Pending",
-      "InAssignment",
-      "Open",
-      "Invoicing",
-      "Processing",
-      "Complete",
-      "InTransit",
-      "Incidence",
-      "Cancelled",
-      "ManualAssignment"
-    ];
+      const statusList = [
+        "Pending",
+        "InAssignment",
+        "Open",
+        "Invoicing",
+        "Processing",
+        "Complete",
+        "InTransit",
+        "Incidence",
+        "Cancelled",
+        "ManualAssignment"
+      ];
 
-    statusList.forEach(status => params.append("status", status));
+      statusList.forEach(status => params.append("status", status));
 
-    const finalUrl = `${baseUrl}?${params.toString()}`;
-    window.open(finalUrl, "_blank");
+      const finalUrl = `${baseUrl}?${params.toString()}`;
+      window.open(finalUrl, "_blank");
+    }
   </script>
 </body>
 </html>
