--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     <!-- Coluna Rato -->
     <div class="coluna">
       <h2>Rato</h2>
-      <button onclick="abrirOrderManagement(190)">Rato - Encomendas Home (190)</button>
-      <button onclick="abrirOrderManagement(191)">Rato - Click & Collect (191)</button>
+      <button onclick="abrirOrderManagement(190)">Rato - Encomendas Home</button>
+      <button onclick="abrirOrderManagement(191)">Rato - Click & Collect</button>
       <button onclick="abrirLiveOperations()">Rato - Encomendas em Direto</button>
     </div>
 
     <!-- Coluna Cova da Piedade -->
     <div class="coluna">
       <h2>Cova da Piedade</h2>
-      <button onclick="abrirOrderManagement(216)">Cova - Encomendas Home (216)</button>
-      <button onclick="abrirOrderManagement(217)">Cova - Click & Collect (217)</button>
+      <button onclick="abrirOrderManagement(216)">Cova - Encomendas Home</button>
+      <button onclick="abrirOrderManagement(217)">Cova - Click & Collect</button>
       <button onclick="abrirLiveOperationsCova()">Cova - Encomendas em Direto</button>
     </div>
   </div>
