--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     }
 
      function abrirMensagemWhatsApp() {
-      window.open("mensagem.html", "_blank");
+      window.open("https://divilella96.github.io/MyDashBoardPlus/mensagem.html", "_blank");
     }
   </script>
 </body>
