--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <button onclick="abrirOrderManagementCova()">Cova - Encomendas e C&C</button>
           <button onclick="abrirLiveOperationsCova()">Cova - Em Direto</button>
           <button onclick="abrirMensagemWhatsApp()">Gerar mensagem WhatsApp</button>
+          <button onclick="abrirPaginaContato()">E-mail Artigo Esquecido</button>         
         </div>
     </div>
 
@@ -119,6 +120,9 @@
 
      function abrirMensagemWhatsApp() {
       window.open("https://divilella96.github.io/MyDashBoardPlus/mensagem.html", "_blank");
+    }
+    function abrirPaginaContato() {
+      window.open("https://divilella96.github.io/MyDashBoardPlus/contact.html", "_blank");
     }
   </script>
 </body>
